# SupportEnv

./: .dockerignore  .env.example  .env.users  .gitignore  Dockerfile  PRD.md  README.md  app.py  app_SuEnv.py  audit_report.txt  check.py  client.py  config.py  docs.txt  filetree.md  fix_ui.py  gradio_ui.py  improve.md  improve_new_1.md  inference.py  inference_output.txt  interface.py  main.py  models.py  new_review.md  openenv.yaml  out.json  out.txt  out2.json  package-lock.json  pre-submission.ps1  pre-submission.sh  pyproject.toml  pytest_out.txt  requirements.txt  review&suggestions.md  review_last_file_mine.md  review_new_updated.md  rewrite_gradio.py  road_to_100.md  (+13 more)
.agents/_shared/: context-budget.md
.agents/code_review_enforcer/: SKILL.md
.agents/git_manager/: SKILL.md
.agents/skill_creator/: SKILL.md
.agents/workflow-guide/: SKILL.md
.claude/: settings.local.json
.github/workflows/: test.yml
.vercel/: project.json
agent skills/_shared/: serena-memory-protocol.md  verify.sh
agent skills/dependency_manager/: SKILL.md
agent skills/docs_updater/: SKILL.md
agent skills/observability_configurator/: SKILL.md
agent skills/orchestrator/: SKILL.md
agent skills/security_hardening/: SKILL.md
baseline/: policy.py  results.json  run_baseline.py  test_results.json
documentation/: prd  prd.txt  trd  trd.txt
frontend/: gradio_ui.py
my_env/: README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
my_env/server/: Dockerfile  __init__.py  app.py  my_env_environment.py
server/: Dockerfile  __init__.py  app.py  environment.py  graders.py  models.py  reward.py  semantic_scorer.py  ticket_generator.py
support-env-frontend/: package-lock.json  package.json  tailwind.config.ts
support-env-frontend/src/app/: layout.tsx  page.tsx
support-env-frontend/src/app/baseline/: page.tsx
tests/: __init__.py  test_api.py  test_baseline.py  test_concurrency.py  test_environment.py  test_graders.py  test_reward.py  test_ticket_generator.py
tmp/: test_baseline.py  test_full_flow.py  test_grader.py
(+10 files in other folders)
